<resources>
    <string name="app_name">HeladoAPI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sabor_string">Sabor</string>
    <string name="idhelado_string">idHelado</string>
    <string name="calories_string">Calories</string>
    <string name="description_string">Description</string>
    <string name="popularity_string">Popularity</string>
    <string name="vegan_string">Vegan?</string>
    <string name="respuesta_recibida">Respuesta recibida: %1$s</string>
    <string name="id_recibido_string">Id recibido: %1$s</string>
    <string name="error_conexion_string">Error en la conexión: %1$s</string>
    <string name="calorias_binding_string">Calorias: %1$s</string>
    <string name="popularity_rank_string">Ranking de popularidad: %1$s</string>
    <string name="opcion_vegana_string">Opcion Vegana: %1$s</string>
    <string name="errorDetailStr">Error al cargar datos. \nCompruebe su conexión</string>
    <string name="tvErrorList">No se pueden cargar los datos. \nCompruebe su conexión.</string>
    <string name="cerrarSesionStr">Cerrar Sesión</string>
    <string name="copyrightStr">©LaMichoacana</string>
    <string name="recoverPassStr">¿Olvidó su contraseña? Restablecer aquí</string>
    <string name="registrarseStr">Registrarse</string>
    <string name="ingresarStr">Ingresar</string>
    <string name="passwordPistaStr">Contraseña</string>
    <string name="emailPistaStr">Correo electrónico</string>
    <string name="sloganStr">Los helados más ricos de Mexico</string>
    <string name="la_michoacana">La Michoacana</string>
    <string name="headerDescStr">Encabezado de Login</string>
    <string name="verifEmailSuccStr">El correo de verificación se ha enviado exitosamente</string>
    <string name="verifEmailErrStr">No se pudo enviar el correo de verificación</string>
    <string name="userCreateSuccStr">Usuario creado exitosamente</string>
    <string name="recoverPassAlertStr">Restablecer contraseña</string>
    <string name="inputEmailrecoverStr">Ingrese su correo para recibir el enlace para restablecer</string>
    <string name="enviarStrr">Enviar</string>
    <string name="linkEmailSendSuccStr">El enlace para restablecer la contraseña ha sido enviado</string>
    <string name="linkEmailSendFailStr">El enlace no se ha podido enviar: %1$s</string>
    <string name="cancelStr">Cancelar</string>
    <string name="askForEmailStr">Favor de ingresar la dirección de correo</string>
    <string name="emailNeededErrStr">Se requiere un correo</string>
    <string name="weakPassErrStr">Se requiere una contraseña válida de por lo menos 6 caracteres</string>
    <string name="authSuccStr">Autenticación exitosa</string>
    <string name="badFormatErrStr">Error: El correo electrónico no tiene un formato correcto</string>
    <string name="badPassErrStr">Error: La contraseña no es válida</string>
    <string name="EmailUsedErrStr">Error: el correo electrónico ya está en uso con otra cuenta.</string>
    <string name="emailAlreadyregisteredStr">Error: Una cuenta ya existe con el mismo correo, pero con diferentes datos de ingreso</string>
    <string name="sessionExpiredStr">Error: La sesión ha expirado. Favor de ingresar nuevamente.</string>
    <string name="UserNotFoundStr">Error: No existe el usuario con la información proporcionada.</string>
    <string name="weakPassStr">La contraseña porporcionada es inválida</string>
    <string name="minSizePassStr">La contraseña debe de tener por lo menos 6 caracteres</string>
    <string name="noNetworkErrStr">Red no disponible o se interrumpió la conexión</string>
    <string name="authFailStr">Error. No se pudo autenticar exitosamente.</string>
</resources>