<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/michoacana_pink"
    tools:context=".ui.fragments.HeladoDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tvSabor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_bold"
                        android:gravity="center_horizontal"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        tools:text="@string/sabor_string" />

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/ivImage"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="20dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        app:riv_corner_radius="10dp"
                        tools:src="@drawable/ice_cream_silhouette" />

                    <TextView
                        android:id="@+id/tvDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        tools:text="@string/description_string" />

                    <TextView
                        android:id="@+id/tvCalories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        tools:text="@string/calories_string" />

                    <TextView
                        android:id="@+id/tvPopularity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        tools:text="@string/popularity_string" />
                    <TextView
                        android:id="@+id/tvVeganOption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        tools:text="@string/vegan_string" />

                </LinearLayout>
            </ScrollView>

            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:indeterminateDrawable="@drawable/loading_anim"
                android:indeterminateDuration="1500"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>